test/expected/typedef_c_int_least32_t.out
typedef char int_least32_t
        ^
9: error: type "char" redefinition incompatible with original type "int"
